--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "reset": "sequelize-cli db:drop; sequelize-cli db:create && sequelize-cli db:migrate; sequelize-cli db:seed:all"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "i": "^0.3.6",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.12",
     "npm": "^7.22.0",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5",
